WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28004
[chromium] setting listeners on MessagePorts doesn't work in the worker process
https://bugs.webkit.org/show_bug.cgi?id=28004
Summary
[chromium] setting listeners on MessagePorts doesn't work in the worker process
John Abd-El-Malek
Reported
2009-08-04 16:20:43 PDT
Bindings need to be updated.
Attachments
Proposed patch
(7.08 KB, patch)
2009-08-04 16:24 PDT
,
John Abd-El-Malek
dglazkov
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Abd-El-Malek
Comment 1
2009-08-04 16:24:47 PDT
Created
attachment 34098
[details]
Proposed patch
Dimitri Glazkov (Google)
Comment 2
2009-08-05 12:54:59 PDT
Comment on
attachment 34098
[details]
Proposed patch
> + return PassRefPtr<EventListener>();
return 0; will work just fine, too. Why are we duplicating these in *Custom files? The logic is the same. Can we possibly use a template or generate these? If you're not up to mucking with this, can you file a bug about this?
Dimitri Glazkov (Google)
Comment 3
2009-08-05 12:55:43 PDT
Assigned for landing.
Adam Barth
Comment 4
2009-08-05 20:05:46 PDT
Comment on
attachment 34098
[details]
Proposed patch Clearing review flag on attachment: 34098 Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/bindings/v8/WorkerContextExecutionProxy.cpp M WebCore/bindings/v8/WorkerContextExecutionProxy.h M WebCore/bindings/v8/custom/V8MessagePortCustom.cpp Committed
r46827
M WebCore/ChangeLog M WebCore/bindings/v8/WorkerContextExecutionProxy.cpp M WebCore/bindings/v8/WorkerContextExecutionProxy.h M WebCore/bindings/v8/custom/V8MessagePortCustom.cpp
r46827
= 7956a160e452c6f261d5af9dc249b0854e5ed616 (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk
http://trac.webkit.org/changeset/46827
Adam Barth
Comment 5
2009-08-05 20:05:50 PDT
All reviewed patches have been landed. Closing bug.
John Abd-El-Malek
Comment 6
2009-08-06 10:46:43 PDT
Thanks for committing. (In reply to
comment #2
)
> (From update of
attachment 34098
[details]
) > > + return PassRefPtr<EventListener>(); > > return 0; > > will work just fine, too.
ah, didn't know (I had just copied this section from the XHR custom bindings).
> > Why are we duplicating these in *Custom files? The logic is the same. Can we > possibly use a template or generate these?
Yeah a template should work.
> If you're not up to mucking with this, can you file a bug about this?
Sure:
https://bugs.webkit.org/show_bug.cgi?id=28049
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug